--- a/Kiba/View/SelfService/KBATransferController.xib
+++ b/Kiba/View/SelfService/KBATransferController.xib
@@ -23,44 +23,41 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </stepper>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Umbuchung " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWU-It-Onn">
-                    <rect key="frame" x="463" y="90" width="126" height="21"/>
+                    <rect key="frame" x="469" y="90" width="115" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IBAN: DE68 2105 0170 0012 3456 78" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPD-e3-feE">
-                    <rect key="frame" x="80" y="207" width="287" height="21"/>
+                    <rect key="frame" x="44" y="207" width="287" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Scheck" translatesAutoresizingMaskIntoConstraints="NO" id="HlV-KU-fyO">
-                    <rect key="frame" x="80" y="252" width="800" height="335"/>
+                    <rect key="frame" x="80" y="252" width="800" height="291"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="335" id="WHZ-Hp-9ty"/>
-                    </constraints>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quellkonto" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kC5-qh-hnZ">
-                    <rect key="frame" x="80" y="178" width="83" height="21"/>
+                    <rect key="frame" x="44" y="178" width="83" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zielkonto" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VCD-6m-f2h">
-                    <rect key="frame" x="593" y="178" width="71" height="21"/>
+                    <rect key="frame" x="693" y="178" width="71" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IBAN: DE68 3223 9386 3842 0992 21" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oEf-HB-bye">
-                    <rect key="frame" x="593" y="207" width="287" height="21"/>
+                    <rect key="frame" x="693" y="207" width="287" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Awc-hp-Jnz">
-                    <rect key="frame" x="281" y="169" width="86" height="30"/>
+                    <rect key="frame" x="245" y="169" width="86" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="wähle Konto">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -70,7 +67,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UeK-wz-qKy">
-                    <rect key="frame" x="794" y="174" width="86" height="30"/>
+                    <rect key="frame" x="894" y="174" width="86" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="wähle Konto">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -82,28 +79,23 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="kC5-qh-hnZ" firstAttribute="top" secondItem="2" secondAttribute="top" constant="178" id="0I6-dI-hW1"/>
-                <constraint firstItem="VCD-6m-f2h" firstAttribute="leading" secondItem="oEf-HB-bye" secondAttribute="leading" id="2z6-1w-DiZ"/>
-                <constraint firstItem="HlV-KU-fyO" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="80" id="8mM-rm-vb2"/>
-                <constraint firstItem="RPD-e3-feE" firstAttribute="bottom" secondItem="oEf-HB-bye" secondAttribute="bottom" id="BUF-x7-kg1"/>
-                <constraint firstItem="VCD-6m-f2h" firstAttribute="bottom" secondItem="kC5-qh-hnZ" secondAttribute="bottom" id="DYO-Qa-7dS"/>
-                <constraint firstItem="oEf-HB-bye" firstAttribute="top" secondItem="UeK-wz-qKy" secondAttribute="bottom" constant="3" id="EYn-fa-htu"/>
-                <constraint firstItem="HlV-KU-fyO" firstAttribute="trailing" secondItem="oEf-HB-bye" secondAttribute="trailing" id="GiS-QS-ieZ"/>
-                <constraint firstItem="HWU-It-Onn" firstAttribute="top" secondItem="2" secondAttribute="top" constant="90" id="JHf-rO-vPO"/>
-                <constraint firstItem="RPD-e3-feE" firstAttribute="top" secondItem="Awc-hp-Jnz" secondAttribute="bottom" constant="8" id="KBd-EZ-YJg"/>
-                <constraint firstItem="HlV-KU-fyO" firstAttribute="top" secondItem="oEf-HB-bye" secondAttribute="bottom" constant="24" id="PSG-Pq-zrI"/>
-                <constraint firstItem="oEf-HB-bye" firstAttribute="top" secondItem="VCD-6m-f2h" secondAttribute="bottom" constant="8" symbolic="YES" id="SDs-gn-teQ"/>
-                <constraint firstItem="kC5-qh-hnZ" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="80" id="Sci-XU-BSF"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HlV-KU-fyO" secondAttribute="trailing" constant="80" id="WKe-7O-GQb"/>
-                <constraint firstItem="oEf-HB-bye" firstAttribute="trailing" secondItem="UeK-wz-qKy" secondAttribute="trailing" id="ZuB-5s-diU"/>
-                <constraint firstItem="UeK-wz-qKy" firstAttribute="leading" secondItem="VCD-6m-f2h" secondAttribute="trailing" constant="130" id="bcr-fT-CEb"/>
-                <constraint firstItem="RPD-e3-feE" firstAttribute="top" secondItem="kC5-qh-hnZ" secondAttribute="bottom" constant="8" symbolic="YES" id="fI5-TY-hlY"/>
-                <constraint firstItem="RPD-e3-feE" firstAttribute="leading" secondItem="kC5-qh-hnZ" secondAttribute="leading" id="fSr-9p-TbN"/>
-                <constraint firstAttribute="centerX" secondItem="HWU-It-Onn" secondAttribute="centerX" constant="-0.5" id="gbR-bC-Rya"/>
-                <constraint firstItem="RPD-e3-feE" firstAttribute="leading" secondItem="HlV-KU-fyO" secondAttribute="leading" id="iq2-Az-Ryu"/>
-                <constraint firstItem="HlV-KU-fyO" firstAttribute="top" secondItem="2" secondAttribute="top" constant="252" id="na1-lZ-nuH"/>
-                <constraint firstItem="Awc-hp-Jnz" firstAttribute="leading" secondItem="kC5-qh-hnZ" secondAttribute="trailing" constant="118" id="z2a-RB-ZZT"/>
-                <constraint firstItem="RPD-e3-feE" firstAttribute="trailing" secondItem="Awc-hp-Jnz" secondAttribute="trailing" id="zec-ZB-O8f"/>
+                <constraint firstItem="HlV-KU-fyO" firstAttribute="top" secondItem="2" secondAttribute="top" constant="252" id="0sq-iy-Ljv"/>
+                <constraint firstItem="RPD-e3-feE" firstAttribute="leading" secondItem="kC5-qh-hnZ" secondAttribute="leading" id="5pd-DJ-8Xq"/>
+                <constraint firstAttribute="centerX" secondItem="HWU-It-Onn" secondAttribute="centerX" constant="-14.5" id="7oQ-pa-nI9"/>
+                <constraint firstItem="UeK-wz-qKy" firstAttribute="top" secondItem="2" secondAttribute="top" constant="174" id="8Eb-QA-yeg"/>
+                <constraint firstItem="RPD-e3-feE" firstAttribute="top" secondItem="kC5-qh-hnZ" secondAttribute="bottom" constant="8" id="AOG-mt-237"/>
+                <constraint firstItem="oEf-HB-bye" firstAttribute="trailing" secondItem="UeK-wz-qKy" secondAttribute="trailing" id="Bmx-gi-H7z"/>
+                <constraint firstItem="oEf-HB-bye" firstAttribute="top" secondItem="UeK-wz-qKy" secondAttribute="bottom" constant="3" id="Fjr-AS-kvR"/>
+                <constraint firstItem="kC5-qh-hnZ" firstAttribute="top" secondItem="2" secondAttribute="top" constant="178" id="M5q-M0-ifJ"/>
+                <constraint firstAttribute="trailing" secondItem="UeK-wz-qKy" secondAttribute="trailing" constant="44" id="RSp-Ey-AqR"/>
+                <constraint firstItem="HWU-It-Onn" firstAttribute="top" secondItem="2" secondAttribute="top" constant="90" id="Tbl-Yp-AMN"/>
+                <constraint firstItem="kC5-qh-hnZ" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="44" id="bAJ-og-g7v"/>
+                <constraint firstItem="VCD-6m-f2h" firstAttribute="top" secondItem="2" secondAttribute="top" constant="178" id="bCA-j2-n8B"/>
+                <constraint firstAttribute="centerX" secondItem="HlV-KU-fyO" secondAttribute="centerX" constant="32" id="hto-9r-wgj"/>
+                <constraint firstAttribute="trailing" secondItem="HlV-KU-fyO" secondAttribute="trailing" constant="144" id="lXy-sz-lkb"/>
+                <constraint firstItem="UeK-wz-qKy" firstAttribute="leading" secondItem="VCD-6m-f2h" secondAttribute="trailing" constant="130" id="oEe-8u-Bvz"/>
+                <constraint firstItem="RPD-e3-feE" firstAttribute="top" secondItem="Awc-hp-Jnz" secondAttribute="bottom" constant="8" symbolic="YES" id="sCv-1y-eBQ"/>
+                <constraint firstItem="Awc-hp-Jnz" firstAttribute="leading" secondItem="kC5-qh-hnZ" secondAttribute="trailing" constant="118" id="zzT-Gl-zT3"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
