--- a/Kiba/Base.lproj/Main.storyboard
+++ b/Kiba/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="H1p-Uh-vWS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -102,7 +102,7 @@
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="Arm-wq-HPj" style="IBUITableViewCellStyleDefault" id="WCw-Qf-5nD">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WCw-Qf-5nD" id="Yec-RQ-AiU">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -264,11 +264,10 @@
             </objects>
             <point key="canvasLocation" x="156" y="3782"/>
         </scene>
-        <!--Self Service Controller-->
+        <!--Self Serv Contr-->
         <scene sceneID="fov-EU-bul">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VhN-js-y0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="selfservice" id="Z7c-nq-S2o" customClass="KBASelfServiceController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="selfservice" id="Z7c-nq-S2o" customClass="KBASelfServContr" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QHb-CT-JUY"/>
                         <viewControllerLayoutGuide type="bottom" id="u5f-ag-4uF"/>
@@ -280,6 +279,7 @@
                     </view>
                     <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VhN-js-y0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1910" y="1450"/>
         </scene>
