--- a/Kiba/View/SelfService/KBASelfServContr.xib
+++ b/Kiba/View/SelfService/KBASelfServContr.xib
@@ -4,14 +4,15 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBASelfServiceController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBASelfServContr">
             <connections>
-                <outlet property="circle" destination="wva-gp-6nP" id="bMH-Zh-hoQ"/>
                 <outlet property="connectButton" destination="TrA-BV-FUy" id="kVQ-py-hnT"/>
                 <outlet property="documentsButton" destination="RzH-By-5M4" id="jlx-74-6Ys"/>
                 <outlet property="firstToSecondElement" destination="Bpm-lg-Ps1" id="V3K-TQ-FI5"/>
                 <outlet property="imageView" destination="P4a-e9-SLS" id="1XH-me-bk3"/>
+                <outlet property="indicator" destination="wva-gp-6nP" id="4Kw-M6-oFB"/>
                 <outlet property="leftConstraintElements" destination="OYL-Ss-S8a" id="kpH-sg-sk0"/>
+                <outlet property="middleWidthElements" destination="laU-P8-ub6" id="dso-u9-ODf"/>
                 <outlet property="secondToThirdElement" destination="sZ9-jv-wEH" id="rJB-dX-7P2"/>
                 <outlet property="subDocContr" destination="4WH-48-ANY" id="X4u-kU-vld"/>
                 <outlet property="subDocTableHeight" destination="Iby-sK-8xz" id="miw-Fs-L6p"/>
@@ -51,20 +52,21 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="hidden" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </activityIndicatorView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="33" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
-                    <rect key="frame" x="374" y="617" width="372" height="142"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="33" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-bi-Kop">
+                    <rect key="frame" x="374" y="595" width="274" height="142"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="142" id="Iby-sK-8xz"/>
+                        <constraint firstAttribute="width" constant="274" id="e5f-md-d1r"/>
                     </constraints>
                     <connections>
                         <outlet property="dataSource" destination="4WH-48-ANY" id="dtA-YX-eFu"/>
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VXW-8c-iZJ">
-                    <rect key="frame" x="54" y="412" width="159" height="30"/>
+                    <rect key="frame" x="54" y="416" width="187" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Kontoauszüge drucken">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -72,14 +74,8 @@
                         <action selector="changeToStatementView:" destination="-1" eventType="touchUpInside" id="Ifw-ao-V0J"/>
                     </connections>
                 </button>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ihre gespeicherten Bescheinigungen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFo-Xk-eZm">
-                    <rect key="frame" x="374" y="588" width="264" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="Hier können sie Ihre Kontoauszüge für einen beliebigen Zeitraum drucken." translatesAutoresizingMaskIntoConstraints="NO" id="g53-X4-pif">
-                    <rect key="frame" x="54" y="432" width="260" height="50"/>
+                    <rect key="frame" x="54" y="440" width="260" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -90,7 +86,7 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="Jetzt bequem Bescheinigungen z.B. (Bonitätsbescheinigung) ausdrucken." translatesAutoresizingMaskIntoConstraints="NO" id="ag2-gB-WWg">
-                    <rect key="frame" x="54" y="607" width="260" height="78"/>
+                    <rect key="frame" x="54" y="619" width="260" height="78"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -100,8 +96,9 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RzH-By-5M4">
-                    <rect key="frame" x="54" y="588" width="118" height="30"/>
+                    <rect key="frame" x="54" y="596" width="139" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Bescheinigungen">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -110,9 +107,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jc2-nY-JlY">
-                    <rect key="frame" x="54" y="231" width="232" height="30"/>
+                    <rect key="frame" x="54" y="231" width="273" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Umbuchung von Ihrem Sparkonto">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -120,14 +118,8 @@
                         <action selector="changeToTransferView:" destination="-1" eventType="touchUpInside" id="JsL-W1-3jU"/>
                     </connections>
                 </button>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ihre gespeicherten Umbuchungen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRH-RO-W15">
-                    <rect key="frame" x="374" y="231" width="246" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="Buchen Sie ohne Verzögerung Geld von ihrem Sparkonto auf ihr Tageskonto." translatesAutoresizingMaskIntoConstraints="NO" id="bKL-Ph-cm2">
-                    <rect key="frame" x="54" y="256" width="260" height="65"/>
+                    <rect key="frame" x="54" y="260" width="260" height="65"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -136,12 +128,11 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="35" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-ch-zgH">
-                    <rect key="frame" x="374" y="261" width="372" height="142"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" style="plain" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="83" sectionHeaderHeight="26" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-ch-zgH">
+                    <rect key="frame" x="374" y="236" width="254" height="142"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" priority="601" constant="372" id="7Pz-Ig-7Oc"/>
+                        <constraint firstAttribute="width" constant="254" id="7Pz-Ig-7Oc"/>
                         <constraint firstAttribute="height" constant="142" id="7QO-DE-nl8"/>
                     </constraints>
                     <connections>
@@ -161,44 +152,36 @@
             <constraints>
                 <constraint firstItem="ag2-gB-WWg" firstAttribute="top" secondItem="RzH-By-5M4" secondAttribute="bottom" constant="-11" id="3TZ-mO-uRN"/>
                 <constraint firstItem="TrA-BV-FUy" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="19" id="53g-jN-3mW"/>
-                <constraint firstItem="eFo-Xk-eZm" firstAttribute="leading" secondItem="1tE-bi-Kop" secondAttribute="leading" id="9DH-es-q1O"/>
-                <constraint firstItem="1tE-bi-Kop" firstAttribute="leading" secondItem="ag2-gB-WWg" secondAttribute="trailing" constant="60" id="9RZ-Bs-AcN"/>
-                <constraint firstItem="xkv-ch-zgH" firstAttribute="top" secondItem="GRH-RO-W15" secondAttribute="bottom" constant="10" id="ANW-GF-KU9"/>
                 <constraint firstItem="g53-X4-pif" firstAttribute="top" secondItem="VXW-8c-iZJ" secondAttribute="bottom" constant="-10" id="AUW-Gf-nv8"/>
                 <constraint firstAttribute="bottom" secondItem="P4a-e9-SLS" secondAttribute="bottom" constant="8" id="BNK-gR-ktK"/>
                 <constraint firstItem="VXW-8c-iZJ" firstAttribute="top" secondItem="bKL-Ph-cm2" secondAttribute="bottom" constant="91" id="Bpm-lg-Ps1"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="VXW-8c-iZJ" secondAttribute="leading" id="Mti-Qt-T7n"/>
                 <constraint firstItem="wva-gp-6nP" firstAttribute="top" secondItem="fQo-AD-f5o" secondAttribute="bottom" constant="26" id="NiI-yQ-u9z"/>
-                <constraint firstItem="eFo-Xk-eZm" firstAttribute="leading" secondItem="GRH-RO-W15" secondAttribute="leading" id="Nq5-6l-hIi"/>
-                <constraint firstItem="1tE-bi-Kop" firstAttribute="top" secondItem="eFo-Xk-eZm" secondAttribute="bottom" constant="9" id="OEB-TJ-b1a"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="54" id="OYL-Ss-S8a"/>
-                <constraint firstItem="xkv-ch-zgH" firstAttribute="trailing" secondItem="1tE-bi-Kop" secondAttribute="trailing" id="Oz3-gA-yOh"/>
-                <constraint firstItem="RzH-By-5M4" firstAttribute="top" secondItem="eFo-Xk-eZm" secondAttribute="top" id="Tun-X5-Zvz"/>
-                <constraint firstItem="Jc2-nY-JlY" firstAttribute="top" secondItem="GRH-RO-W15" secondAttribute="top" id="Vht-W4-0Ge"/>
                 <constraint firstItem="wva-gp-6nP" firstAttribute="leading" secondItem="TrA-BV-FUy" secondAttribute="trailing" constant="13" id="bor-mQ-nQp"/>
+                <constraint firstItem="1tE-bi-Kop" firstAttribute="leading" secondItem="xkv-ch-zgH" secondAttribute="leading" id="cvw-VI-pKf"/>
                 <constraint firstItem="ag2-gB-WWg" firstAttribute="trailing" secondItem="bKL-Ph-cm2" secondAttribute="trailing" id="ecN-jM-Ql8"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="RzH-By-5M4" secondAttribute="leading" id="f39-RG-K6Q"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xkv-ch-zgH" secondAttribute="trailing" constant="60" id="fvS-hb-mLN"/>
                 <constraint firstAttribute="centerX" secondItem="fQo-AD-f5o" secondAttribute="centerX" constant="-0.5" id="gYP-cF-eQo"/>
                 <constraint firstAttribute="centerX" secondItem="TrA-BV-FUy" secondAttribute="centerX" constant="-0.5" id="hbc-la-kjq"/>
                 <constraint firstItem="xkv-ch-zgH" firstAttribute="leading" secondItem="bKL-Ph-cm2" secondAttribute="trailing" constant="60" id="laU-P8-ub6"/>
-                <constraint firstItem="eFo-Xk-eZm" firstAttribute="leading" secondItem="xkv-ch-zgH" secondAttribute="leading" id="lut-xl-Ktc"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="bKL-Ph-cm2" secondAttribute="leading" id="mj6-b0-ma0"/>
+                <constraint firstItem="xkv-ch-zgH" firstAttribute="top" secondItem="Jc2-nY-JlY" secondAttribute="top" constant="5" id="nT3-qF-nIC"/>
                 <constraint firstItem="ag2-gB-WWg" firstAttribute="trailing" secondItem="g53-X4-pif" secondAttribute="trailing" id="paX-e3-ANT"/>
                 <constraint firstItem="bKL-Ph-cm2" firstAttribute="top" secondItem="Jc2-nY-JlY" secondAttribute="bottom" constant="-5" id="sPS-Y0-NMT"/>
                 <constraint firstItem="RzH-By-5M4" firstAttribute="top" secondItem="g53-X4-pif" secondAttribute="bottom" constant="106" id="sZ9-jv-wEH"/>
                 <constraint firstAttribute="trailing" secondItem="P4a-e9-SLS" secondAttribute="trailing" constant="2" id="tva-0a-zjk"/>
                 <constraint firstItem="fQo-AD-f5o" firstAttribute="top" secondItem="2" secondAttribute="top" constant="90" id="uGG-g8-ety"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1tE-bi-Kop" secondAttribute="trailing" constant="60" id="uRi-Il-iel"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="ag2-gB-WWg" secondAttribute="leading" id="uZd-y3-J70"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="top" secondItem="2" secondAttribute="top" constant="231" id="wFj-nZ-6Ld"/>
                 <constraint firstItem="Jc2-nY-JlY" firstAttribute="leading" secondItem="g53-X4-pif" secondAttribute="leading" id="yU4-rA-Sey"/>
+                <constraint firstItem="RzH-By-5M4" firstAttribute="top" secondItem="1tE-bi-Kop" secondAttribute="top" constant="1" id="yzo-jf-Kkh"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
         </view>
-        <customObject id="IHt-Ar-9XJ" customClass="KBASubTransferController"/>
-        <customObject id="4WH-48-ANY" customClass="KBASubDocumentController"/>
+        <customObject id="IHt-Ar-9XJ" customClass="KBATransTableContr"/>
+        <customObject id="4WH-48-ANY" customClass="KBADocTableContr"/>
     </objects>
     <resources>
         <image name="glas" width="200" height="200"/>
